[package]
name = "snp"
version = "0.1.0"
authors = ["The Enarx Developers <enarx-devel@lists.enarx.dev>"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/enarx/snp"
repository = "https://github.com/enarx/snp"
description = "Library for AMD SEV-SNP"
keywords = ["amd", "sev", "snp"]
categories = ["os", "os::linux-apis", "parsing", "network-programming", "hardware-support"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/snp", workflow = "test" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/snp" }
is-it-maintained-open-issues = { repository = "enarx/snp" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iocuddle = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
codicon = "3.0"
bitflags = "1.2"

[dev-dependencies]
kvm-bindings = "0.3"
kvm-ioctls = "0.6"
mmarinus = "0.2"
